# the-godfather-game-discord

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.cmd  estructura.txt
docs/superpowers/plans/: 2026-06-27-godfather-discord-rpc.md
docs/superpowers/specs/: 2026-06-27-godfather-discord-rpc-design.md
src/: Config.cpp  Config.h  DiscordIPC.cpp  DiscordIPC.h  Logger.cpp  Logger.h  dllmain.cpp
test/: ipc_host_test.cpp  unit_tests.cpp
